# SimpleDownloadManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
Core/: DownloaderCore.cpp  DownloaderCore.h  DownloaderWrapper.cpp  DownloaderWrapper.h  FileDownloaderModel.cpp  FileDownloaderModel.h
Network/: DownloadItemWrapper.cpp  DownloadItemWrapper.h  FileDownloader.cpp  FileDownloader.h
View/: CircularProgressBar.qml  InputURLDialog.qml  SimpleDownloadManager.qml
